<resources>
    <string name="app_name">RecruitmentHelper</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_events">My events</string>
    <string name="log_out">Log out</string>
    <string name="options">Options</string>
    <string name="delete_event">Delete event</string>
    <string name="edit_event">Edit event</string>
    <string name="event_time">Event time</string>
    <string name="event_seats">Event seats</string>
    <string name="attend">Attend</string>
    <string name="event_location">Event location</string>
    <string name="event_name">Event name</string>
    <string name="enter_event_number_of_seats">Enter event number of seats</string>
    <string name="enter_event_location">Enter event location</string>
    <string name="enter_date_and_time">Enter date and time</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="attending">Attending</string>
    <string name="cancel_attendance">Cancel attendance</string>
    <string name="reports">Reports</string>
    <string name="see_events_between_dates">See events between dates</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="enter_start_date">Enter start date</string>
    <string name="generate">Generate</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="Users">Users</string>
    <string name="candidates">Candidates</string>
    <string name="enter_user_name">Enter username</string>
    <string name="enter_email">Enter user email</string>
    <string name="enter_role">Enter user role</string>
    <string name="enter_password">Enter user password</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_role">Role</string>
    <string name="candidate_phone">Phone</string>
    <string name="candidate_city">City</string>
    <string name="candidate_position">InterestedPosition</string>
    <string name="fullProfile">View full profile</string>
    <string name="archived">Archived</string>
    <string name="interviews">All interviews</string>
</resources>
