<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_nav_users"
            android:title="@string/Users" />
        <item
            android:id="@+id/nav_candidates"
            android:icon="@drawable/ic_nav_candidates"
            android:title="@string/candidates"/>
        <item
            android:id="@+id/nav_archived"
            android:icon="@drawable/ic_nav_archived"
            android:title="Archived candidates"/>
        <item
            android:id="@+id/nav_interviews"
            android:icon="@drawable/ic_nav_interviews"
            android:title="@string/interviews"/>
        <item
            android:id="@+id/nav_future_interviews"
            android:icon="@drawable/ic_nav_future_interviews"
            android:title="Future interviews"/>
        <item
            android:id="@+id/nav_past_interviews"
            android:icon="@drawable/ic_nav_past_interviews"
            android:title="Past interviews"/>
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_baseline_assessment_24"
            android:title="@string/reports"/>
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/log_out"
                android:icon="@drawable/logout">
            </item>
        </menu>
    </item>
</menu>