<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="366dp"
        android:layout_height="227dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#552586"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_eventName"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/event_name"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txt_eventLocation"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/event_location"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_eventName" />

            <TextView
                android:id="@+id/txt_eventTime"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/event_time"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_eventLocation" />

            <TextView
                android:id="@+id/txt_eventSeats"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/event_seats"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_eventLocation" />

            <Button
                android:id="@+id/btn_attend"
                android:layout_width="82dp"
                android:layout_height="25dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/attend"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.722" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/cancel_attendance"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.92" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>