<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/candidateCardView"
        android:layout_width="365dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#552586"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_candidateName"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txt_candidateEmail"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/user_email"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_candidateName" />

            <TextView
                android:id="@+id/txt_candidatePhone"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/candidate_phone"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_candidateEmail" />

            <TextView
                android:id="@+id/txt_candidateCity"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="44dp"
                android:gravity="center"
                android:text="@string/candidate_city"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_candidateEmail" />

            <TextView
                android:id="@+id/txt_candidatePosition"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="@string/candidate_position"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_candidateEmail" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>