<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recruitmenthelper.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.recruitmenthelper.ui.users.UsersFragment"
        android:label="@string/Users"
        tools:layout="@layout/fragment_users" />
    <fragment
        android:id="@+id/nav_candidates"
        android:name="com.example.recruitmenthelper.ui.candidates.CandidatesFragment"
        android:label="@string/candidates"
        tools:layout="@layout/fragment_candidates" />
    <fragment
        android:id="@+id/nav_archived"
        android:name="com.example.recruitmenthelper.ui.archive.ArchivedCandidatesFragment"
        android:label="Archived candidates"
        tools:layout="@layout/fragment_candidates" />
    <fragment
        android:id="@+id/nav_my_candidates"
        android:name="com.example.recruitmenthelper.ui.mycandidates.MyCandidatesFragment"
        android:label="My candidates"
        tools:layout="@layout/fragment_my_candidates" />
    <fragment
        android:id="@+id/nav_interviews"
        android:name="com.example.recruitmenthelper.ui.interviews.InterviewsFragment"
        android:label="All interviews"
        tools:layout="@layout/fragment_interviews" />
    <fragment
        android:id="@+id/nav_future_interviews"
        android:name="com.example.recruitmenthelper.ui.futureinterviews.FutureInterviewsFragment"
        android:label="Future interviews"
        tools:layout="@layout/fragment_future_interviews" />
    <fragment
        android:id="@+id/nav_past_interviews"
        android:name="com.example.recruitmenthelper.ui.pastinterviews.PastInterviewsFragment"
        android:label="Past interviews"
        tools:layout="@layout/fragment_past_interviews" />
    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.recruitmenthelper.ui.reports.ReportsFragment"
        android:label="Reports"
        tools:layout="@layout/fragment_reports" />

</navigation>